--- a/2.html
+++ b/2.html
@@ -3,61 +3,7 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
-  <style>
-    body {
-      margin:0px;
-    }
-
-    #grid {
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-
-    #grid #article {
-      padding-left: 25px;
-    }
-
-    #grid ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding: 20px;
-      padding-left:30px;
-    }
-
-    @media(max-width:800px) {
-      #grid {
-        display: block;
-      }
-
-      #grid ol {
-        display: block;
-        border-right:none;
-      }
-    }
-
-    #active {
-      color:red;
-    }
-
-    .saw {
-      color:gray;
-    }
-
-    a {
-      color:black;
-      text-decoration: none;
-    }
-
-    h1 {
-      font-size:60px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0px;
-      padding:20px;
-    }
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
