--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <li><a href="1.html">HTML</a></li>
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
-      <input type="button" value = "night" onclick="document.querySelector('body'),style.backgroundColor='black';  document.querySelector('body').style.color='white';
+      <input type="button" value = "night" onclick="document.querySelector('body').style.backgroundColor='black';  document.querySelector('body').style.color='white';
       ">
-      <input type="button" value = "day" onclick="document.querySelector('body'),style.backgroundColor='white';document.querySelector('body').style.color='black';
+      <input type="button" value = "day" onclick="document.querySelector('body').style.backgroundColor='white';document.querySelector('body').style.color='black';
       ">
     </ol>
     <div id="article">
