--- a/1.html
+++ b/1.html
@@ -1,72 +1,31 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
-  <meta charset="utf-8">
-    <style>
-    body {
-      margin:0px;
-    }
-
-    #grid {
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-
-    #grid #article {
-      padding-left: 25px;
-    }
-
-    #grid ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding: 20px;
-      padding-left:30px;
-    }
-
-    @media(max-width:800px) {
-      #grid {
-        display: block;
-      }
-
-      #grid ol {
-        display: block;
-        border-right:none;
-      }
-    }
-
-    #active {
-      color:red;
-    }
-
-    .saw {
-      color:gray;
-    }
-
-    a {
-      color:black;
-      text-decoration: none;
-    }
-
-    h1 {
-      font-size:60px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0px;
-      padding:20px;
-    }
-
-  </style>
+	<title>WEB1 - html</title>
+	<meta charset="utf-8">
+    
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1><a href="index.html">WEB</a></h1>
 	<div id="grid">
-		<ol>
-		    <li><a href="1.html">HTML</a></li>
-		    <li><a href="2.html">CSS</a></li>
-		    <li><a href="3.html">JavaScript</a></li>
-	  </ol>
+        <dl>
+            <dt><a href="1.html">HTML</a></dt>
+            <dt><a href="2.html">CSS</a><br></dt>
+            <dt><a href="3.html">JavaScript</a></dt>
+            <input type="button" value="night" onclick="
+                var target = document.querySelector('body');
+                if(this.value === 'night') {
+                    target.style.backgroundColor = 'black';
+                    target.style.color = 'white';
+                    this.value = 'day';
+                } else {
+                    target.style.backgroundColor = 'white';
+                    target.style.color = 'black';
+                    this.value = 'night';
+                }
+            ">
+        </dl>
 		<div id="article">
 			<h2>HTML</h2>
 			<p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
