--- a/2.html
+++ b/2.html
@@ -1,32 +1,50 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - CSS</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+<title>WEB1 - CSS</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <div id="grid">
-    <ol>
-      <li><a href="1.html" class="saw">HTML</a></li>
-      <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li>
-      <li><a href="3.html" id="active">JavaScript</a></li>
-    </ol>
-<!--
-  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
-  <ol>
-    <li><a href="1.html"><font color="red">HTML</font></a></li>
-    <li><a href="2.html"><font color="red">CSS</font></a></li>
-    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
-  </ol>
--->
-    <div id="article">
-      <h2>CSS</h2>
-      <p>
-        Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
-      </p>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+        <dl>
+            <dt><a href="1.html">HTML</a></dt>
+            <dt><a href="2.html">CSS</a><br></dt>
+            <dt><a href="3.html">JavaScript</a></dt>
+            <input type="button" value="night" onclick="
+                var target = document.querySelector('body');
+                if(this.value === 'night') {
+                    target.style.backgroundColor = 'black';
+                    target.style.color = 'white';
+                    this.value = 'day';
+                } else {
+                    target.style.backgroundColor = 'white';
+                    target.style.color = 'black';
+                    this.value = 'night';
+                }
+            ">
+        </dl>
+        <!--
+        <ol>
+            <li><a href="1.html" class="saw">HTML</a></li>
+            <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li>
+            <li><a href="3.html" id="active">JavaScript</a></li>
+        </ol>
+        
+        <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+        <ol>
+        <li><a href="1.html"><font color="red">HTML</font></a></li>
+        <li><a href="2.html"><font color="red">CSS</font></a></li>
+        <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+        </ol>
+        -->
+        <div id="article">
+            <h2>CSS</h2>
+            <p>
+            Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+            </p>
+        </div>
     </div>
-  </div>
 </body>
 </html>
