--- a/3.html
+++ b/3.html
@@ -1,78 +1,36 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - JavaScript</title>
-  <meta charset="utf-8">
-  <style>
-    body {
-      margin:0px;
-    }
-
-    #grid {
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-
-    #grid #article {
-      padding-left: 25px;
-    }
-
-    #grid ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding: 20px;
-      padding-left:30px;
-    }
-
-    @media(max-width:800px) {
-      #grid {
-        display: block;
-      }
-
-      #grid ol {
-        display: block;
-        border-right:none;
-      }
-    }
-
-    #active {
-      color:red;
-    }
-
-    .saw {
-      color:gray;
-    }
-
-    a {
-      color:black;
-      text-decoration: none;
-    }
-
-    h1 {
-      font-size:60px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0px;
-      padding:20px;
-    }
-
-  </style>
+<title>WEB1 - JavaScript</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <div id="grid">
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <div id="article">
-      <h2>JavaScript</h2>
-      <p>
-        JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
-      </p>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+        <dl>
+            <dt><a href="1.html">HTML</a></dt>
+            <dt><a href="2.html">CSS</a><br></dt>
+            <dt><a href="3.html">JavaScript</a></dt>
+            <input type="button" value="night" onclick="
+                var target = document.querySelector('body');
+                if(this.value === 'night') {
+                    target.style.backgroundColor = 'black';
+                    target.style.color = 'white';
+                    this.value = 'day';
+                } else {
+                    target.style.backgroundColor = 'white';
+                    target.style.color = 'black';
+                    this.value = 'night';
+                }
+            ">
+        </dl>
+        <div id="article">
+            <h2>JavaScript</h2>
+            <p>
+            JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
+            </p>
+        </div>
     </div>
-  </div>
 </body>
 </html>
