--- a/index.html
+++ b/index.html
@@ -1,135 +1,62 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
-  <meta charset="utf-8">
-  <style>
-    body {
-      margin:0px;
-    }
-
-    #grid {
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-
-    #grid #article {
-      padding-left: 25px;
-    }
-
-    #grid ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding: 20px;
-      padding-left:30px;
-    }
-
-    @media(max-width:800px) {
-      #grid {
-        display: block;
-      }
-
-      #grid ol {
-        display: block;
-        border-right:none;
-      }
-    }
-
-    #active {
-      color:red;
-    }
-
-    .saw {
-      color:gray;
-    }
-
-    a {
-      color:black;
-      text-decoration: none;
-    }
-
-    h1 {
-      font-size:60px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0px;
-      padding:20px;
-    }
-
-  </style>
+<title>WEB1 - HTML</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
 
-  <div id="grid">
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-      <input type="button" value = "night" onclick="document.querySelector('body').style.backgroundColor='black';  document.querySelector('body').style.color='white';
-      ">
-      <input type="button" value = "day" onclick="document.querySelector('body').style.backgroundColor='white';document.querySelector('body').style.color='black';
-      ">
-    </ol>
-    <div id="article">
-      <h2>WEB</h2>
-      <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
-      </p>
+    <div id="grid">
+        <dl>
+            <dt><a href="1.html">HTML</a></dt>
+            <dt><a href="2.html">CSS</a><br></dt>
+            <dt><a href="3.html">JavaScript</a></dt>
+            <input type="button" value="night" onclick="
+                var target = document.querySelector('body');
+                if(this.value === 'night') {
+                    target.style.backgroundColor = 'black';
+                    target.style.color = 'white';
+                    this.value = 'day';
+                } else {
+                    target.style.backgroundColor = 'white';
+                    target.style.color = 'black';
+                    this.value = 'night';
+                }
+            ">
+            <!--
+            <input id="night_day" type="button" value="night" onclick="
+                if(document.querySelector('#night_day').value === 'night') {
+                    document.querySelector('body').style.backgroundColor = 'black';
+                    document.querySelector('body').style.color = 'white';
+                    document.querySelector('#night_day').value = 'day';
+                } else {
+                    document.querySelector('body').style.backgroundColor = 'white';
+                    document.querySelector('body').style.color = 'black';
+                    document.querySelector('#night_day').value = 'night';
+                }
+            ">
+            -->
+        </dl>
+        <div id="article">
+            <h2>WEB</h2>
+            <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+            </p>
+        </div>
     </div>
-  </div>
-  <p>
-    <div id="disqus_thread"></div>
-<script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://web1-b8cxj6aryl.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
+    <p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175510214-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-</p><p>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5f380ffa4c7806354da6a309/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-
-</p><p>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175510214-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-175510214-1');
-</script>
-
-</p>
+        gtag('config', 'UA-175510214-1');
+    </script>
+    </p>
 
 </body>
 </html>
